samples/_failures_safe/1761207719_8dc717_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f117843.c: In function ‘main’:
./samples/SAFE/__tmp_3f117843.c:176:5: error: expected declaration or statement at end of input
  176 |     if (!tokens) {
      |     ^~
./samples/SAFE/__tmp_3f117843.c:176:5: error: expected declaration or statement at end of input
